# bebop

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README-spike-bemu.md  README.md  build.rs  flake.nix
.config/: nextest.toml
bebop/: Cargo.toml  rustfmt.toml
bebop/src/: config.rs  lib.rs  simulator.rs  top.rs
bebop/src/arch/: mod.rs
bebop/src/arch/bemu/: bemu.rs  mod.rs
bebop/src/arch/buckyball/: bank.rs  bmt.rs  decoder.rs  main.rs  mem_ctrl.rs  mod.rs  mset.rs  rob.rs  rs.rs  scoreboard.rs  systolic_array.rs  tdma_loader.rs  tdma_storer.rs  vecball.rs
bebop/src/arch/gemmini/: gemmini.rs  main.rs  mod.rs
bebop/src/buckyball/: balldomain.rs  bank.rs  buckyball.rs  cycleModel.rs  decoder.rs  inject.rs  main.rs  mem_ctrl.rs  mod.rs  rob.rs  rs.rs  tdma.rs  tdma_loader.rs  tdma_storer.rs  vecball.rs  vector_ball.rs
bebop/src/buckyball/balldomain/: balldomain.rs  compute.rs  domain_decoder.rs  mod.rs  relu.rs  sa.rs  transpose.rs  vector.rs
bebop/src/buckyball/frontend/: decoder.rs  frontend.rs  mod.rs  rob.rs  rs.rs
bebop/src/buckyball/frontend/bundles/: mod.rs  rocc_frontend.rs
bebop/src/buckyball/frontend/model/: decoder.rs  mod.rs  rob.rs  rs.rs
bebop/src/buckyball/frontend/unit/: frontend.rs  mod.rs
bebop/src/buckyball/frontend/unit/decoder/: events.rs  mod.rs
bebop/src/buckyball/frontend/unit/rob/: events.rs
bebop/src/buckyball/frontend/unit/rs/: events.rs
bebop/src/buckyball/lib/: mod.rs  msg.rs  operation.rs
bebop/src/buckyball/memdomain/: bank.rs  banks.rs  dma.rs  memdomain.rs  memory.rs  mod.rs  tdma.rs  tdma_load.rs  tdma_store.rs
bebop/src/builtin/: port.rs
bebop/src/global_decoder/: compute.rs  config.rs  decoder.rs  mod.rs  mvin.rs  mvout.rs  unknown.rs
bebop/src/memdomain/: memdomain.rs  mod.rs
bebop/src/memdomain/decoder/: decoder.rs  mod.rs
bebop/src/memdomain/mem/: bank.rs
bebop/src/memdomain/memctrl/: controller.rs
bebop/src/model/: mod.rs  model.rs  npu.rs  simulator.rs
bebop/src/model/balldomain/: mod.rs  sa.rs
bebop/src/model/frontend/: decoder.rs  mod.rs  rob.rs  rs.rs
bebop/src/model/frontend/model/: mod.rs  rob.rs
bebop/src/model/memdomain/: bank.rs  mod.rs
bebop/src/simrs/bebop/: Cargo.toml  ack_msg.rs  lib.rs  mod.rs  msg.rs  port_type.rs
bebop/src/simrs/sim/: Cargo.toml
bebop/src/simrs/sim/models/: batcher.rs  coupled.rs  exclusive_gateway.rs  gate.rs  generator.rs  load_balancer.rs  model.rs  model_trait.rs  parallel_gateway.rs  processor.rs  stochastic_gate.rs  stopwatch.rs  storage.rs
bebop/src/simrs/sim/simulator/: coupling.rs  mod.rs  web.rs
bebop/src/simrs/sim/utils/: mod.rs
bebop/src/simulator/: host.rs  mod.rs  simulator.rs
bebop/src/simulator/config/: config.rs  default.toml  mod.rs
bebop/src/simulator/host/: config.rs  host.rs  host.toml  mod.rs
bebop/src/simulator/server/: mod.rs
bebop/src/simulator/server/socket/: cmd.rs  dma.rs  mod.rs  protocol.rs  server.rs  verilator_client.rs
bebop/src/simulator/sim/: inject.rs  mod.rs  mode.rs  model.rs  records.rs  shell.rs
bebop/src/simulator/utils/: log.rs  log_config.rs  mod.rs  report.rs
bebop/src/socket/: handler.rs  mod.rs  protocol.rs  server.rs
bebop/src/test/: sim.rs
bebop/tests/: buckyball_c.rs  gemmini_c.rs  gemmini_mlir.rs
examples/: CMakeLists.txt  Makefile  bebop_insn.h  bebop_rocc.cc  test_bemu_custom.c  test_bemu_integration.c  test_bemu_matmul.c  test_bemu_mvin_mvout.c  test_bemu_transpose.c
src/nodes/bemu/: .gitignore  Cargo.toml  README.md  build.rs
src/nodes/bemu/native/: btif.cc  btif.h  ffi.rs  rocc.cc  spike.cc  spike.rs  spike_wrapper.cc
src/nodes/bemu/src/: buckyball_rocc.cc  config.rs  ffi.rs  lib.rs  main.rs  sim.rs  spike_wrapper.cc  trace.rs
src/nodes/bemu/src/bank/: bank.rs
src/nodes/bemu/src/configs/: config.rs  config.toml
src/nodes/bemu/src/emu/bank/: bank.rs  mmio.rs  mod.rs
src/nodes/bemu/src/emu/inst/: 00_fence.rs  01_barrier.rs  02_gemmini_config.rs  16_mvout.rs  32_mset.rs  33_mvin.rs  34_mmio_set.rs  35_mvin_mmio.rs  48_im2col.rs  49_transpose.rs  50_relu.rs  51_fp2int.rs  51_quant.rs  52_dequant.rs  52_int2fp.rs  53_gemmini_preload.rs  55_mxfp2int.rs  64_mul_warp16.rs  65_bfp.rs  66_gemmini_compute_preloaded.rs  67_gemmini_compute_accumulated.rs  80_gemmini_loop_ws.rs  96_gemmini_loop_conv_ws.rs  bank_matrix.rs  base.rs  decode.rs  exec_latency.rs  gemmini_state.rs  instruction.rs  instruction_register.rs  mod.rs
src/nodes/bemu/src/inst/: 04_bdb_counter.rs  32_mset.rs  33_mvin.rs  49_transpose.rs  50_relu.rs  51_quant.rs  64_mul_warp16.rs  bank_matrix.rs  decode.rs  exec_latency.rs  gemmini_state.rs
src/nodes/bemu/src/trace/: banktrace.rs  btrace.rs  itrace.rs  mod.rs  mtrace.rs  trace.rs
src/nodes/p2e/: .gitignore  BUILD_FLOW.md  Cargo.toml  README.md  build.rs  build.sh  buildbitstream.sh  flake.nix  nohup.out  sourceme.sh
src/nodes/p2e/src/: cli.rs  config.rs  ctb_wrapper.cpp  dpi_impl.cpp  ffi.rs  lib.rs  main.rs  runner.rs  sim.rs
src/nodes/p2e/src/builder/: bitstream.rs  mod.rs  pipeline.rs
src/nodes/p2e/src/builder/1_vsyn/: mod.rs
src/nodes/p2e/src/builder/2_vcom/: mod.rs  vcom_compile.tcl
src/nodes/p2e/src/ctb/: ctb_wrapper.cpp  cycle_trace.rs  ffi.rs  mod.rs
src/nodes/p2e/src/ddr/: ddr.rs
src/nodes/p2e/src/mmio/: mod.rs  scu.rs
src/nodes/p2e/src/runner/: mod.rs  p2e_sim.rs  run.tcl  runworkload.rs
src/nodes/p2e/src/simulator/: mod.rs  p2e_sim.rs
src/nodes/p2e/src/vdbg/: mod.rs
src/nodes/verilator/: Cargo.toml  README.md  build.rs
src/nodes/verilator/native/: ffi.rs  main.cc  main.h  verilator.cc  verilator.h
src/nodes/verilator/native/memory/: BBSimDRAM.cc  mm_dramsim3.cc
src/nodes/verilator/src/: config.rs  lib.rs  main.rs  sim.rs
src/nodes/verilator/src/ddr/: dram.rs
src/nodes/verilator/src/mmio/: mmio.rs
src/nodes/verilator/src/trace/: dpi.rs  trace.rs
src/workload/: CMakeLists.txt  README.md  bebop_insn.h  bebop_rocc.cc  bebop_shm.h  mod.rs  prep.rs  test_bemu_custom.c  test_bemu_integration.c  test_bemu_matmul.c  test_bemu_mvin_mvout.c  test_bemu_transpose.c  test_vecunit_tiled_matmul.c
(+399 files in other folders)
