[workspace]
members = [
  ".",
  "src/nodes/lib/bank-hash",
  "src/nodes/lib/fd-redirect",
  "src/nodes/lib/uart",
  "src/nodes/verilator",
  "src/nodes/bemu",
  "src/nodes/p2e",
]
resolver = "2"

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[package]
name = "bebop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bebop"
path = "src/main.rs"

[features]
default = []
verilator = ["dep:bebop-verilator", "dep:bebop-bemu"]
bemu = ["dep:bebop-bemu"]
p2e = ["dep:bebop-p2e"]
build-bitstream = ["bebop-p2e?/build-bitstream"]

[dependencies]
bebop-verilator = { path = "src/nodes/verilator", optional = true }
bebop-bemu = { path = "src/nodes/bemu", optional = true }
bebop-p2e = { path = "src/nodes/p2e", optional = true }
bebop-dasm = { path = "src/nodes/lib/dasm" }
bebop-bank-hash = { path = "src/nodes/lib/bank-hash" }
bebop-fd-redirect = { path = "src/nodes/lib/fd-redirect" }
bebop-uart = { path = "src/nodes/lib/uart" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["fs", "mman", "signal", "process"] }
toml = "0.8"
ctrlc = "3"
camino = "1.1"
snafu = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duct = "0.13"

[dev-dependencies]
libtest-mimic = "0.8"
assert_cmd = "2"
walkdir = "2"
predicates = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[lints]
workspace = true
