[package]
name = "bebop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bebop"
path = "bin/bebop.rs"

[dependencies]
sim = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rustyline = "14.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[features]
smoke-tests = []
bb-tests = []
