[package]
name = "bebop-bemu"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
snafu = "0.8"
once_cell = "1"
bebop-elf = { path = "../lib/elf" }
bebop-syscall = { path = "../lib/syscall" }
bebop-dtb = { path = "../lib/dtb" }
bebop-uart = { path = "../lib/uart" }

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[lints]
workspace = true
