[package]
name = "bebop-p2e"
version = "0.1.0"
edition = "2021"

[lib]
name = "bebop_p2e"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bebop-p2e"
path = "src/main.rs"

[features]
default = []
build-bitstream = []

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
snafu = "0.8"
regex = "1.10"

[build-dependencies]
regex = "1.10"

[package.metadata.docs.rs]
all-features = true
