[package]
name = "bebop-p2e"
version = "0.1.0"
edition = "2021"

[lib]
name = "bebop_p2e"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
build-bitstream = []

[dependencies]
log = "0.4"
env_logger = "0.11"
snafu = "0.8"
duct = "0.13"

[build-dependencies]
duct = "0.13"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
