[package]
name = "bebop-verilator"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
path = "src/lib.rs"

[dependencies]
snafu = "0.8"
libc = "0.2"
bebop-uart = { path = "../lib/uart" }
bebop-dasm = { path = "../lib/dasm" }
bebop-fd-redirect = { path = "../lib/fd-redirect" }
bebop-rtl-trace = { path = "../lib/rtl-trace" }
bebop-bank-hash = { path = "../lib/bank-hash" }
ctrlc = "3.4"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[lints]
workspace = true
